# perched-and-planted

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: coderabbit-demo.mdc  database-and-migrations.mdc  fastapi-api-layer.mdc  plantpal-core.mdc  services-layer.mdc  testing.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_app_metadata.py  002_add_plants_table.py
app/: main.py
app/api/: router.py
app/api/routes/: health.py  metadata.py  plants.py  reminders.py  root.py
app/core/: config.py  constants.py  database.py  logging.py  scheduler.py
app/models/: __init__.py  app_metadata.py  plant.py
app/schemas/: health.py  metadata.py  plant.py  reminders.py  root.py
app/services/: health.py  metadata.py  plants.py  reminders.py  settings_store.py  sms.py  watering.py
app/static/: index.html
config/: app.yaml  database.yaml  logging.yaml  reminders.yaml
scripts/: entrypoint.sh
tests/: conftest.py  test_config.py  test_database.py  test_health.py  test_metadata.py  test_plants.py  test_reminders.py  test_scheduler.py  test_sms.py  test_watering.py
